fix intro height to 100% on mobile

--- a/less/intro.less
+++ b/less/intro.less
@@ -1,7 +1,7 @@
 .intro {
     display: table;
     width: 100%;
-    height: auto;
+    height: 100%;
     padding: 100px 0;
     text-align: center;
     color: white;
@@ -13,14 +13,12 @@
       right: 0;
       bottom: 0;
       left: 0;
-      background: @primary-gradient-dark no-repeat bottom center;
+      background: @primary-gradient-dark no-repeat;
       background-position: bottom;
-      background-size: cover;
+      background-size: contain;
       opacity: .6;
-      height: 50%;
-      @media(min-width: @md) {
-        height: 100%;
-      }
+      height: ;
+      overflow: hidden;
     }
     -webkit-background-size: cover;
     -moz-background-size: cover;
